test/analyze/type_check/if/expression.exp
Error: If expression is missing an `else` block
test/analyze/type_check/if/expression.myte:7:10-9:3
 7 | /   val x = if (true) {
   | |           ^^^^^^^^^^^
 8 | |     1
   | | ^^^^^
 9 | |   };
   | \ ^^^

Error: If expression is missing an `else` block
test/analyze/type_check/if/expression.myte:18:4-20:5
 18 | /     if (true) {
    | |     ^^^^^^^^^^^
 19 | |       1
    | | ^^^^^^^
 20 | |     }
    | \ ^^^^^

Error: If expression is missing an `else` block
test/analyze/type_check/if/expression.myte:30:9-32:3
 30 | /   } else if (true) {
    | |          ^^^^^^^^^^^
 31 | |     1
    | | ^^^^^
 32 | |   };
    | \ ^^^

Error: If expression is missing an `else` block
test/analyze/type_check/if/expression.myte:36:14-38:5
 36 | /     | true -> if (true) {
    | |               ^^^^^^^^^^^
 37 | |       1
    | | ^^^^^^^
 38 | |     }
    | \ ^^^^^

Error: If expression is missing an `else` block
test/analyze/type_check/if/expression.myte:41:6-43:7
 41 | /       if (true) {
    | |       ^^^^^^^^^^^
 42 | |         1
    | | ^^^^^^^^^
 43 | |       }
    | \ ^^^^^^^

Error: Expected type `Bool` but found `T`
test/analyze/type_check/if/expression.myte:52:7
 52 |   (if (x) { 1 } else { 2 });
    |        ^

Error: Expected type `Int` but found `String`
test/analyze/type_check/if/expression.myte:63:24-36
 63 |   (if (true) { 1 } else { "string" });
    |                         ^^^^^^^^^^^^

Error: Expected type `T` but found `U`
test/analyze/type_check/if/expression.myte:64:24-29
 64 |   (if (true) { x } else { y });
    |                         ^^^^^

Error: Expected type `(Int, Int)` but found `(Int, Int, Int)`
test/analyze/type_check/if/expression.myte:65:29-42
 65 |   (if (true) { (1, 2) } else { (1, 2, 3) });
    |                              ^^^^^^^^^^^^^

Error: Expected type `Int` but found `String`
test/analyze/type_check/if/expression.myte:68:24-36
 68 |   (if (true) { 1 } else { "string" }: Int);
    |                         ^^^^^^^^^^^^

Error: Expected type `String` but found `Int`
test/analyze/type_check/if/expression.myte:69:3-36
 69 |   (if (true) { 1 } else { "string" }: String);
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Expected type `Int` but found `String`
test/analyze/type_check/if/expression.myte:69:24-36
 69 |   (if (true) { 1 } else { "string" }: String);
    |                         ^^^^^^^^^^^^

Error: Expected type `Int` but found `Unit`
test/analyze/type_check/if/expression.myte:101:9-104:3
 101 | /   } else {
     | |          ^
 102 | |     // Error
     | | ^^^^^^^^^^^^
 103 | |     1;
     | | ^^^^^^
 104 | |   };
     | \ ^^^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/if/expression.myte:112:11-115:5
 112 | /     } else {
     | |            ^
 113 | |       // Failure
     | | ^^^^^^^^^^^^^^^^
 114 | |       true
     | | ^^^^^^^^^^
 115 | |     }
     | \ ^^^^^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/if/expression.myte:121:17-21
 121 |       | false -> true
     |                  ^^^^